force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_Begun_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Begun_On__c</fullName>
    <formula>if(not(ISBLANK(Has_begun_on_for_IMPORT__c) ),Has_begun_on_for_IMPORT__c,DATEVALUE ( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Begun On</label>
    <type>Date</type>
</CustomField>