force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_begun_on_for_IMPORT__c.field-meta.xml
<CustomField>
    <fullName>Has_begun_on_for_IMPORT__c</fullName>
    <description>Update this field via import alows to update &quot;has begunh on&quot;</description>
    <label>Has begun  on for IMPORT</label>
    <type>Date</type>
</CustomField>