force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_Entered_in_Progress_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Entered_in_Progress_On__c</fullName>
    <label>Has Entered in Progress On</label>
    <type>Date</type>
</CustomField>