force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_entered_Notice_Period_on__c.field-meta.xml
<CustomField>
    <fullName>Has_entered_Notice_Period_on__c</fullName>
    <label>Has entered Notice Period on</label>
    <type>Date</type>
</CustomField>