force-app/main/default/objects/Merchant_Special_Process__c/fields/I_changed_the_delivery_delay_in_the_BO__c.field-meta.xml
<CustomField>
    <fullName>I_changed_the_delivery_delay_in_the_BO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I changed the delivery time in the BO</label>
    <type>Checkbox</type>
</CustomField>