force-app/main/default/objects/Merchant_Special_Process__c/fields/I_launched_a_Battery_project__c.field-meta.xml
<CustomField>
    <fullName>I_launched_a_Battery_project__c</fullName>
    <inlineHelpText>https://www.notion.so/Opportunity-Battery-Project-136b996e8b624f0abc97a871c24e39fc</inlineHelpText>
    <label>I launched a Battery project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>