force-app/main/default/objects/Merchant_Special_Process__c/fields/I_pushed_a_testing_solution__c.field-meta.xml
<CustomField>
    <fullName>I_pushed_a_testing_solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I pushed a testing solution</label>
    <type>Checkbox</type>
</CustomField>