force-app/main/default/objects/Merchant_Special_Process__c/fields/I_pushed_Back_Ship__c.field-meta.xml
<CustomField>
    <fullName>I_pushed_Back_Ship__c</fullName>
    <label>I pushed Back Ship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, and the merchant accepted</fullName>
            </value>
            <value>
                <fullName>Yes, and the merchant refused</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>