force-app/main/default/objects/Merchant_Special_Process__c/fields/If_yes_which_one__c.field-meta.xml
<CustomField>
    <fullName>If_yes_which_one__c</fullName>
    <label>If yes, which one</label>
    <type>TextArea</type>
</CustomField>