force-app/main/default/objects/Merchant_Special_Process__c/fields/InitialSubmitterLookup__c.field-meta.xml
<CustomField>
    <fullName>InitialSubmitterLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchant_Special_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>