force-app/main/default/objects/Merchant_Special_Process__c/fields/Integration_Solution_used__c.field-meta.xml
<CustomField>
    <fullName>Integration_Solution_used__c</fullName>
    <inlineHelpText>If you are already connected to other platforms via an integrator or use management software, please indicate which one:</inlineHelpText>
    <label>Integration/Solution used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beezup</fullName>
            </value>
            <value>
                <fullName>BrickFox</fullName>
            </value>
            <value>
                <fullName>BrightPearl</fullName>
            </value>
            <value>
                <fullName>ChannelAdvisor</fullName>
            </value>
            <value>
                <fullName>ChannelEngine</fullName>
            </value>
            <value>
                <fullName>Cubyn</fullName>
            </value>
            <value>
                <fullName>EcomDash</fullName>
            </value>
            <value>
                <fullName>Finale</fullName>
            </value>
            <value>
                <fullName>Finale Inventory</fullName>
            </value>
            <value>
                <fullName>Huboo</fullName>
            </value>
            <value>
                <fullName>Infiplex</fullName>
            </value>
            <value>
                <fullName>IziFlux</fullName>
            </value>
            <value>
                <fullName>Linnworks</fullName>
            </value>
            <value>
                <fullName>Market Invaders</fullName>
            </value>
            <value>
                <fullName>Neteven</fullName>
            </value>
            <value>
                <fullName>Odoo</fullName>
            </value>
            <value>
                <fullName>Plenty Markets</fullName>
            </value>
            <value>
                <fullName>Quipt</fullName>
            </value>
            <value>
                <fullName>SellBrite</fullName>
            </value>
            <value>
                <fullName>SellerCloud</fullName>
            </value>
            <value>
                <fullName>SellerMania</fullName>
            </value>
            <value>
                <fullName>Shiprush</fullName>
            </value>
            <value>
                <fullName>ShipStation</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>ShoppingFeed</fullName>
            </value>
            <value>
                <fullName>Sitelicon</fullName>
            </value>
            <value>
                <fullName>SkuVault</fullName>
            </value>
            <value>
                <fullName>SolidCommerce</fullName>
            </value>
            <value>
                <fullName>TradeGecko</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>