force-app/main/default/objects/Merchant_Special_Process__c/fields/Interested_Countries__c.field-meta.xml
<CustomField>
    <fullName>Interested_Countries__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Which countries does the merchant want to sell on Back Market?</inlineHelpText>
    <label>Interested Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>