force-app/main/default/objects/Merchant_Special_Process__c/fields/Interested_in_BuyBack__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_BuyBack__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Is the merchant interested in BuyBack service?</inlineHelpText>
    <label>Interested in BuyBack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>