force-app/main/default/objects/Merchant_Special_Process__c/fields/International_Presence__c.field-meta.xml
<CustomField>
    <fullName>International_Presence__c</fullName>
    <label>International Presence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>