force-app/main/default/objects/Merchant_Special_Process__c/fields/Is_the_merchant_using_a_testing_solution__c.field-meta.xml
<CustomField>
    <fullName>Is_the_merchant_using_a_testing_solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the merchant using a testing solution</label>
    <type>Checkbox</type>
</CustomField>