force-app/main/default/objects/Merchant_Special_Process__c/fields/isAutomatically_created__c.field-meta.xml
<CustomField>
    <fullName>isAutomatically_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check by Process Builder if Special Process is created via Performance Data</description>
    <label>Automatically created</label>
    <type>Checkbox</type>
</CustomField>