force-app/main/default/objects/Merchant_Special_Process__c/fields/Launch_the_exit__c.field-meta.xml
<CustomField>
    <fullName>Launch_the_exit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch the exit</label>
    <type>Checkbox</type>
</CustomField>