force-app/main/default/objects/Merchant_Special_Process__c/fields/Legal_comment__c.field-meta.xml
<CustomField>
    <fullName>Legal_comment__c</fullName>
    <label>Legal comment</label>
    <type>TextArea</type>
</CustomField>