force-app/main/default/objects/Merchant_Special_Process__c/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-entrepreneur</fullName>
            </value>
            <value>
                <fullName>Micro-entreprise (EI)</fullName>
            </value>
            <value>
                <fullName>Entreprise individuelle à responsabilité limitée (EIRL)</fullName>
            </value>
            <value>
                <fullName>Entreprise unipersonnelle à responsabilité limitée (EURL)</fullName>
            </value>
            <value>
                <fullName>Société d’exercice libéral à responsabilité limitée (SELARL)</fullName>
            </value>
            <value>
                <fullName>Société à responsabilité limitée (SARL)</fullName>
            </value>
            <value>
                <fullName>Société anonyme (SA)</fullName>
            </value>
            <value>
                <fullName>Société par actions simplifiée (SAS)</fullName>
            </value>
            <value>
                <fullName>Société par actions simplifiée unipersonnelle (SASU)</fullName>
            </value>
            <value>
                <fullName>Société en nom collectif (SNC)</fullName>
            </value>
            <value>
                <fullName>Société civile professionnelle (SCP)</fullName>
            </value>
            <value>
                <fullName>Société coopérative et participative (SCOP)</fullName>
            </value>
            <value>
                <fullName>Société coopérative d’intérêt collectif (SCIC)</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Empresário em Nome Individual</fullName>
            </value>
            <value>
                <fullName>Sociedade de Responsabilidade Limitada (LLP)</fullName>
            </value>
            <value>
                <fullName>Sociedade (Unipessoal) por Quotas (LDA)</fullName>
            </value>
            <value>
                <fullName>Sociedade Anónima (SA)</fullName>
            </value>
            <value>
                <fullName>Sociedade em Nome Colectivo (CIA)</fullName>
            </value>
            <value>
                <fullName>Einzelunternehmer</fullName>
            </value>
            <value>
                <fullName>Gesellschaft bürgerlichen Rechts (GbR)</fullName>
            </value>
            <value>
                <fullName>Eingetragener Kaufmann (e.K.)</fullName>
            </value>
            <value>
                <fullName>Offene Handelsgesellschaft (OHG)</fullName>
            </value>
            <value>
                <fullName>Kommanditgesellschaft (KG)</fullName>
            </value>
            <value>
                <fullName>Gesellschaft mit beschränkter Haftung (GmbH) oder Unternehmergesellschaft (haftungsbeschränkt)</fullName>
            </value>
            <value>
                <fullName>Aktiengesellschaft (AG)</fullName>
            </value>
            <value>
                <fullName>GmbH &amp; Co KG</fullName>
            </value>
            <value>
                <fullName>个体经营者</fullName>
            </value>
            <value>
                <fullName>合作伙伴</fullName>
            </value>
            <value>
                <fullName>有限责任合伙</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>