force-app/main/default/objects/Merchant_Special_Process__c/fields/Limitation_to_apply__c.field-meta.xml
<CustomField>
    <fullName>Limitation_to_apply__c</fullName>
    <label>Limitation to apply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>