force-app/main/default/objects/Merchant_Special_Process__c/fields/Link_to_Marketplace_Storefronts__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Marketplace_Storefronts__c</fullName>
    <inlineHelpText>As you sell on other marketplaces, please provide links to your other storefronts:</inlineHelpText>
    <label>Link to Marketplace Storefronts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>