force-app/main/default/objects/Merchant_Special_Process__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <description>The Merchant the special process is applied to.</description>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Merchant Special Processes</relationshipLabel>
    <relationshipName>Merchant_Special_Processes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>