force-app/main/default/objects/Merchant_Special_Process__c/fields/Merchant_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Record_Type__c</fullName>
    <formula>Merchant__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Record Type</label>
    <type>Text</type>
</CustomField>