force-app/main/default/objects/Merchant_Special_Process__c/fields/MerchantRT__c.field-meta.xml
<CustomField>
    <fullName>MerchantRT__c</fullName>
    <formula>Merchant__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MerchantRT</label>
    <type>Text</type>
</CustomField>