force-app/main/default/objects/Merchant_Special_Process__c/fields/NextStage__c.field-meta.xml
<CustomField>
    <fullName>NextStage__c</fullName>
    <label>NextStage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Special_Process_Stages</valueSetName>
    </valueSet>
</CustomField>