force-app/main/default/objects/Merchant_Special_Process__c/fields/Notice_period_duration_days__c.field-meta.xml
<CustomField>
    <fullName>Notice_period_duration_days__c</fullName>
    <label>Notice period duration (# days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>