force-app/main/default/objects/Merchant_Special_Process__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <inlineHelpText>How many employees do you have?</inlineHelpText>
    <label># of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-9</fullName>
            </value>
            <value>
                <fullName>10-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
            <value>
                <fullName>249-499</fullName>
                <isActive>false</isActive>
                <label>249-499</label>
            </value>
            <value>
                <fullName>50-249</fullName>
                <isActive>false</isActive>
                <label>50-249</label>
            </value>
            <value>
                <fullName>500-999</fullName>
                <isActive>false</isActive>
                <label>500-999</label>
            </value>
            <value>
                <fullName>&gt;1000</fullName>
                <isActive>false</isActive>
                <label>&gt;1000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>