force-app/main/default/objects/Merchant_Special_Process__c/fields/Number_of_Sourcing_Providers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sourcing_Providers__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>How many  top sourcing providers does the merchant have?</inlineHelpText>
    <label>Number of Sourcing Providers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>&gt;10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>