force-app/main/default/objects/Merchant_Special_Process__c/fields/Open_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Open_Follow_up__c</fullName>
    <formula>Special_Process_Type__c = &quot;Follow-up&quot;  || Special_Process_Type__c = &quot;Follow-Up US&quot;  || Special_Process_Type__c = &quot;Back Camp US&quot;
 &amp;&amp; 
(
ISPICKVAL( Stage__c , &quot;Draft&quot;)  || 
 ISPICKVAL( Stage__c , &quot;Phase 1&quot;)  || 
 ISPICKVAL( Stage__c , &quot;Phase 2&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Follow-up</label>
    <type>Checkbox</type>
</CustomField>