force-app/main/default/objects/Merchant_Special_Process__c/fields/Pending_for_manager_s_approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_for_manager_s_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending for manager&apos;s approval</label>
    <type>Checkbox</type>
</CustomField>