force-app/main/default/objects/Merchant_Special_Process__c/fields/Performance_Data__c.field-meta.xml
<CustomField>
    <fullName>Performance_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Data</label>
    <referenceTo>Performance_Data__c</referenceTo>
    <relationshipLabel>Merchant Special Processes</relationshipLabel>
    <relationshipName>Performance_Data</relationshipName>
    <type>Lookup</type>
</CustomField>