force-app/main/default/objects/Merchant_Special_Process__c/fields/Potential_BuyBack_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Potential_BuyBack_Monthly__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>How many stocks does the merchant buy from individuals each month?</inlineHelpText>
    <label># of Monthly potential Buybacks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-15</fullName>
            </value>
            <value>
                <fullName>15-25</fullName>
            </value>
            <value>
                <fullName>25-50</fullName>
            </value>
            <value>
                <fullName>&gt;50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>