force-app/main/default/objects/Merchant_Special_Process__c/fields/Potential_Carriers__c.field-meta.xml
<CustomField>
    <fullName>Potential_Carriers__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Which carriers does the merchant already work with?</inlineHelpText>
    <label>Potential Carriers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chronopost</fullName>
            </value>
            <value>
                <fullName>Colis Privé</fullName>
            </value>
            <value>
                <fullName>Correos</fullName>
            </value>
            <value>
                <fullName>Cubyn</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>DPD</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Geodis</fullName>
            </value>
            <value>
                <fullName>GLS</fullName>
            </value>
            <value>
                <fullName>Hermes</fullName>
            </value>
            <value>
                <fullName>Mondial Relay</fullName>
            </value>
            <value>
                <fullName>Royal Mail</fullName>
            </value>
            <value>
                <fullName>Seur</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>