force-app/main/default/objects/Merchant_Special_Process__c/fields/Prefered_Language__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Language__c</fullName>
    <inlineHelpText>Select Your Language</inlineHelpText>
    <label>Prefered Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>