force-app/main/default/objects/Merchant_Special_Process__c/fields/Pricing_Update_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Update_Frequency__c</fullName>
    <label>Pricing Update Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-2 times/day</fullName>
            </value>
            <value>
                <fullName>3-5 times/day</fullName>
            </value>
            <value>
                <fullName>+5 times/day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>