force-app/main/default/objects/Merchant_Special_Process__c/fields/Quality_comment__c.field-meta.xml
<CustomField>
    <fullName>Quality_comment__c</fullName>
    <label>Quality comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>