force-app/main/default/objects/Merchant_Special_Process__c/fields/Quality_NO_GO__c.field-meta.xml
<CustomField>
    <fullName>Quality_NO_GO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As a Champion, tick this box before the final ETA if you consider this process can&apos;t be completely saved.</inlineHelpText>
    <label>Quality NO-GO</label>
    <type>Checkbox</type>
</CustomField>