force-app/main/default/objects/Merchant_Special_Process__c/fields/Reason_for_exit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_exit__c</fullName>
    <label>Exit main reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counterfeit</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Legal/Finance</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Voluntary Leave</fullName>
            </value>
            <value>
                <fullName>Bankrupcy</fullName>
                <isActive>false</isActive>
                <label>Bankrupcy</label>
            </value>
            <value>
                <fullName>Changed activity</fullName>
                <isActive>false</isActive>
                <label>Changed activity</label>
            </value>
            <value>
                <fullName>Failed NMO</fullName>
                <isActive>false</isActive>
                <label>Churn NMO</label>
            </value>
            <value>
                <fullName>Debit note</fullName>
                <isActive>false</isActive>
                <label>Debit note</label>
            </value>
            <value>
                <fullName>Invoice_Compliance_Audit_Failed</fullName>
                <isActive>false</isActive>
                <label>Invoice Compliance Audit Failed</label>
            </value>
            <value>
                <fullName>Merchant Debt</fullName>
                <isActive>false</isActive>
                <label>Merchant Debt</label>
            </value>
            <value>
                <fullName>Suspicious charger alert failed - charger from MO not the same as test report</fullName>
                <isActive>false</isActive>
                <label>Suspicious charger alert failed - charger from MO not the same as test report</label>
            </value>
            <value>
                <fullName>Suspicious charger alert failed - no valid document</fullName>
                <isActive>false</isActive>
                <label>Suspicious charger alert failed - no valid document</label>
            </value>
            <value>
                <fullName>Voluntary Exit</fullName>
                <isActive>false</isActive>
                <label>Voluntary Exit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>