force-app/main/default/objects/Merchant_Special_Process__c/fields/Reason_to_refuse_the_FU_3__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_refuse_the_FU_3__c</fullName>
    <label>Reason to refuse the FU	3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_to_refuse_the_FU</valueSetName>
    </valueSet>
</CustomField>