force-app/main/default/objects/Merchant_Special_Process__c/fields/Reason_to_refuse_the_FU__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_refuse_the_FU__c</fullName>
    <label>Reason to refuse the FU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_to_refuse_the_FU</valueSetName>
    </valueSet>
</CustomField>