force-app/main/default/objects/Merchant_Special_Process__c/fields/ReferentChampionApproval__c.field-meta.xml
<CustomField>
    <fullName>ReferentChampionApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referent champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchant_Special_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>