force-app/main/default/objects/Merchant_Special_Process__c/fields/Referral_Comment__c.field-meta.xml
<CustomField>
    <fullName>Referral_Comment__c</fullName>
    <label>Referral Comment</label>
    <type>TextArea</type>
</CustomField>