force-app/main/default/objects/Merchant_Special_Process__c/fields/Referral_Representative__c.field-meta.xml
<CustomField>
    <fullName>Referral_Representative__c</fullName>
    <label>Referral Representative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>